--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Hardik Gujrathi - Portfolio</title>
 
     <!-- Favicon  -->
-    <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="shortcut icon" href="/logo.svg" type="image/svg+xml" />
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
